note.txt
        pcl::PointIndices::Ptr inliers_line_peak_points2 (new pcl::PointIndices);

        if ( kdtree3.nearestKSearch (searchPoint2, K2, pointIdxNKNSearch2, pointNKNSquaredDistance2) > 0 )
        {
            for(int j=0; j<K2; j++)
            {
                inliers_line_peak_points2->indices.push_back( pointIdxNKNSearch2[j] );
            }
        }


/home/gordon/feelEnvironment/euclidean_cluster_extraction.cpp: In function ‘void getPlaneContourPoints(pcl::PointCloud<pcl::PointXYZ>::Ptr, std::vector<pcl::PointXYZ>&)’:
/home/gordon/feelEnvironment/euclidean_cluster_extraction.cpp:231:76: error: ‘extract_point’ was not declared in this scope
             extract_point(line_together_point_group_disorder_tmp, out_index);
                                                                            ^
/home/gordon/feelEnvironment/euclidean_cluster_extraction.cpp:257:81: error: ‘extract_point’ was not declared in this scope
         extract_point(line_together_point_group_disorder_tmp, pointIdxNKNSearch4);



重要参数
1. 随机采样一致性寻找平面
while (cloud_cluster->points.size () > 0.05 * nr_points)
2. 提取平面的轮廓线
    while(origin_cloud_for_line->points.size() > 0.05*num_points)
3. kdTree搜索轮廓线的相邻点
int K4 = 1;
4.  
double thres = 8 * pi / 180;  // 判别两直线是否平行的阈值，8°







(gdb) p image_points_buf 
$9 = std::vector of length 88, capacity 88 = {
{x = 559.379333, y = 363.163879}, 
{x = 524.683777, y = 365.30307}, {x = 489.531189, y = 367.512817}, 
{x = 455.392212, y = 369.619141}, {x = 421.047546, y = 371.713348}, 
{x = 387.707001, y = 373.809235}, {x = 354.627197, y = 376.262695},
{x = 322.140747, y = 378.405273}, {x = 289.950134, y = 380.485992},
{x = 257.968719, y = 382.917511}, {x = 226.299866, y = 385.20462}, 
{x = 554.481934, y = 328.542419}, {x = 519.40271, y = 330.917511}, 
{x = 485.074371, y = 333.332916}, {x = 451.06485, y = 335.730103}, 
{x = 417.579773, y = 337.747742}, {x = 384.456909, y = 340.278748},
{x = 351.959076, y = 342.618988}, {x = 319.656769, y = 344.905426}, 
{x = 288.144196, y = 347.625427}, {x = 256.527863, y = 349.910522},
{x = 225.31041, y = 352.343658}, {x = 549.169189, y = 294.709991}, 
{x = 514.865051, y = 297.385223}, {x = 480.556976, y = 299.976929},
{x = 446.99884, y = 302.357727}, {x = 413.907013, y = 304.997437}, 
{x = 381.517609, y = 307.563141}, {x = 349.243927, y = 310.139282},
{x = 317.613159, y = 312.685333}, {x = 286.17749, y = 315.269073}, 
{x = 255.154755, y = 317.775909}, {x = 224.38739, y = 320.275177}, 
{x = 544.51239, y = 261.922394}, {x = 510.291565, y = 264.694885}, 
{x = 476.356934, y = 267.510071}, {x = 443.130554, y = 270.33963},
{x = 410.654358, y = 272.972076}, {x = 378.642609, y = 275.745392},
{x = 346.807709, y = 278.437164}, {x = 315.499207, y = 280.915436},
{x = 284.49231, y = 283.780151}, {x = 253.510925, y = 286.337769},
{x = 223.461212, y = 289.153656}, {x = 539.441956, y = 229.640152},
{x = 505.674713, y = 232.768753}, {x = 472.305298, y = 235.934204}, 
{x = 439.611267, y = 238.619858}, {x = 407.44046, y = 241.668381}, 
{x = 375.770325, y = 244.594299}, {x = 344.422821, y = 247.470795}, 
{x = 313.461975, y = 250.427155}, {x = 282.681671, y = 253.112732},
{x = 252.208496, y = 255.658615}, {x = 222.137726, y = 258.640991}, 
{x = 534.504517, y = 198.531326}, {x = 501.462677, y = 201.694946},
{x = 468.290833, y = 205.050964}, {x = 436.270538, y = 207.820099}, 
{x = 404.291565, y = 211.370178}, {x = 373.155792, y = 213.836029},
{x = 341.910339, y = 216.838364}, {x = 311.247498, y = 219.907974}, 
{x = 280.701263, y = 222.721893}, {x = 251.059235, y = 225.826736},
{x = 221.33757, y = 228.722397}, {x = 530.355469, y = 167.674332}, 
{x = 497.088898, y = 171.474579}, {x = 464.707031, y = 174.701904}, 
{x = 432.577057, y = 177.648834}, {x = 401.347809, y = 180.988266},
{x = 370.164886, y = 184.495331}, {x = 339.689392, y = 187.270935},
{x = 309.264954, y = 190.448502}, {x = 279.473511, y = 193.64624},
{x = 249.627136, y = 196.506195}, {x = 220.312057, y = 199.544754}, 
{x = 525.895264, y = 137.74353}, {x = 493.265686, y = 141.53978},
{x = 461.03833, y = 145.330429}, {x = 429.463623, y = 148.582047},
{x = 398.237274, y = 151.536743}, {x = 367.578857, y = 155.317062}, 
{x = 337.481079, y = 158.492477}, {x = 307.389893, y = 161.412354},
{x = 277.73291, y = 164.634521}, {x = 248.400177, y = 167.753159},
{x = 218.975723, y = 170.591217}}

